--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "npm-run-all": "^4.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-currency-formatter": "^0.1.1",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-intl": "^2.4.0",
+    "react-scripts": "1.0.14",
+    "react-simple-currency": "^1.0.15"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
