--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^16.0.0",
     "react-intl": "^2.4.0",
     "react-scripts": "1.0.14",
-    "react-simple-currency": "^1.0.15"
+    "react-simple-currency": "^1.0.15",
+    "react-star-rating": "^1.4.2",
+    "react-stars": "^2.2.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
